# oopLabs

./: lab1.cpp
lab1/: README.md  main.cpp  tests.cpp
lab2/: CMakeLists.txt  README.md  main.cpp
lab2/make/: CMakeLists.txt
lab2/src/: twelwe.cpp  vector.cpp  vector.hpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: figure.h  figure_array.h  rectangle.h  square.h  trapezoid.h
lab3/src/: figure.cpp  figure_array.cpp  rectangle.cpp  square.cpp  trapezoid.cpp
lab3/tests/: tests.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: figure.h  figure_array.h  rectangle.h  square.h  trapezoid.h
lab4/test/: test.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: Allocator.h  Queue.h  allocator.h  item_queue.h  queue.h
lab5/src/: Allocator.cpp  Queue.cpp  queue_iterator.cpp
lab5/test/: test.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/include/: DataMethods.hpp  Dragon.hpp  Factory.hpp  Knight.hpp  NPC.hpp  Observers.hpp  Pegas.hpp
lab6/src/: DataMethods.cpp  Dragon.cpp  Factory.cpp  Knight.cpp  NPC.cpp  Observers.cpp  Pegas.cpp
lab6/tests/: test.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/include/: DataMethods.hpp  Dragon.hpp  Factory.hpp  FightManager.hpp  Knight.hpp  NPC.hpp  Observers.hpp  Pegas.hpp
lab7/src/: DataMethods.cpp  Dragon.cpp  FightManager.cpp  Knight.cpp  NPC.cpp  Observers.cpp  Pegas.cpp
lab7/tests/: tests.cpp
laba2/: CMakeLists.txt  main.cpp
laba2/Twelve/: CMakeLists.txt  twelve.cpp  twelve.h
laba2/tests/: CMakeLists.txt  test.cpp
src/containers/: FiguresVector.cpp
tests/: tests.cpp
